# TaskManager

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: task_manager_ci.yml
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/core/: base_views.py  direct_access_mixin.py  messages_mixins.py  related_deletion_mixins.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/: admin.py  forms.py  urls.py  views.py
task_manager/utils/: ViewsMixins.py  __init__.py  direct_access_handler.py  messages_mixin.py  messages_mixins.py  permissions_mixin.py  related_deletion_handler.py  related_deletion_mixins.py
templates/: base.html  home.html  login.html  messages.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/tasks/: create.html  delete.html  detail.html  index.html  task_page.html  update.html
templates/users/: create.html  delete.html  index.html  update.html
tests/: __init__.py  conftest.py  test_delete_related.py  test_views.py
tests/labels_tests/: test_models.py  test_views.py
tests/statuses_tests/: test_models.py  test_views.py
tests/tasks_tests/: test_filter_form.py  test_models.py  test_views.py
tests/users/: test_views.py
tests/users_tests/: test_models.py  test_views.py
(+20 files in other folders)
